Fix related item performance and don't truncate related item description

--- a/ckanext/datagovau/theme/public/css/datagovau.css
+++ b/ckanext/datagovau/theme/public/css/datagovau.css
@@ -7,7 +7,9 @@
     float: right;
   }
 }
-
+.media-item .media-image {
+    max-height: 125px;
+}
 .context-info .info .dl .dd {
   margin-top: 3px;
   margin-left: 0;
